--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <hr>
   </div>
   <hr>
-  <h3>Curious! Everything got bigger! Lol</h3>
+  <h3>Curious! Everything got bigger! this is fun</h3>
   <p>Feel free to set font-sizes back to normal. We set a font-size using the body tag, but did you notice that EVERYTHING got bigger? All the text on this page is inside 'p' and 'div' tags.</p>
   <p>Because the 'body' tag contains all the 'p' tags and all the 'div' tags, some values we set, like font-size, will trickle down to the elements inside</p>
   <hr>
