--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   <p>To implement a class, we will need to write a CSS block just like we did with 'body'.  For example:
   <pre>
     .myClass {
-      background-color:gray;
+      background-color: blue;
       color: blue
     }
   </pre>
